kaio/tests/compile_fail/cf03_println.stderr
error: unsupported statement in GPU kernel
 --> tests/compile_fail/cf03_println.rs:6:5
  |
6 |     println!("hello");
  |     ^^^^^^^^^^^^^^^^^^
